Implement brand create feature
