# app/Http/Controllers/ProductController.php
@@ -134,12 +134,79 @@ class ProductController extends Controller
         return parent::index($request);
     }
 
-    // /**
-    //  * Store a newly created resource in storage.
-    //  */
-    // public function store(StoreProductRequest $request)
-    // {
-    // }
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @OA\Post(
+     *     path="/api/v1/product/create",
+     *     tags={"Products"},
+     *     summary="Create a new product",
+     *     description="Products API endpoint",
+     *     operationId="product.store",
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\RequestBody(
+     *         description="product object",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 required={"title", "category_uuid", "description", "price", "metadata"},
+     *                 @OA\Property(
+     *                     property="category_uuid",
+     *                     type="string",
+     *                     description="Category UUID",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="title",
+     *                     type="string",
+     *                     description="Product title",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     type="integer",
+     *                     description="Product price",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string",
+     *                     description="Product description",
+     *                 ),
+     *                 @OA\Property(
+     *                     property="metadata",
+     *                     type="object",
+     *                     description="Product metadata",
+     *                    @OA\Property(property="image", type="string"),
+     *                    @OA\Property(property="brand", type="string"),
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="ok",
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Page not found"
+     *     ),
+     *     @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Entity"
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal server error"
+     *     ),
+     * )
+     */
+    public function store()
+    {
+        return parent::store();
+    }
 
     /**
      * Display the specified resource.
